--- a/map.html
+++ b/map.html
@@ -10,6 +10,8 @@
   <body>
   <div id="container">
 	<button id="clearButton" onclick="animatePaths()">Animate cars</button>
+	<button id="clearButton" onclick="drawPathSpeed()">Show car speed</button>
+	<button id="clearButton" onclick="drawpaths()">Show all paths</button>
 
 	<div id="map-canvas"/>
 	
@@ -79,12 +81,13 @@
 		
 			carData = readData(data);
 
-			drawpaths(carData);
-			drawPathSpeed();
+			drawpaths();
 		});
 
-		function drawpaths(carData)
+		function drawpaths()
 		{
+			clearOverlays();
+
 			var paths = [];
 			
 			for (var i=1; i<carData.length; i++)
