--- a/map.html
+++ b/map.html
@@ -124,7 +124,7 @@
 
 			for (var i=1; i<carData.length; i++)
 			{
-				for(var j=0; j<(carData[i].length-1); j++)
+				for(var j=0; j<(carData[i].length-1); j+=2)
 				{
 					var paths = [];
 					
