--- a/map.html
+++ b/map.html
@@ -20,6 +20,9 @@
 	<div id="timeline"></div>
 
 	<div id="loading"><p>Loading map...</p></div>
+	<div id="infobox">
+		<svg id="svgcanvas"></svg>
+	</div>
 
 	<div id="map-canvas">
 	</div>
