DBSCAN clustering function has been added

--- a/map.html
+++ b/map.html
@@ -15,6 +15,7 @@
 		<li><button id="clearButton" onclick="drawPathSpeed(hourMin, hourMax)">Show car speed</button></li>
 		<li><button id="clearButton" onclick="drawpaths(hourMin, hourMax)">Show all paths</button></li>
 		<li><button id="clearButton" onclick="drawSlowTraffic(hourMin, hourMax)">Slow traffic</button></li>
+		<li><button id="clearButton" onclick="drawCluster(hourMin, hourMax)">Potential tailback areas</button></li>
 	</ol>
 
 	<div id="timeline"></div>
@@ -47,6 +48,7 @@
 	<!--javascript files-->
 	<script src="js/drawFunctions.js"></script>
 	<script src="js/readData.js"></script>
+	<script src="js/clustering.js"></script>
   	
   	<!--Main Javascript-->
 	<script type="text/javascript">
