--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
 		<li><button id="clearButton" onclick="drawpaths(hourMin, hourMax)">Show all paths</button></li>
 		<li><button id="clearButton" onclick="drawSlowTraffic(hourMin, hourMax)">Slow traffic</button></li>
 		<li><button id="clearButton" onclick="calculateCluster(hourMin, hourMax)">Potential tailback areas</button></li>
-		<li><button id="clearButton" onclick="trafficBehavior()">Added traffic</button></li>
+		<li><button id="clearButton" onclick="trafficBehavior(hourMin, hourMax)">Added traffic</button></li>
 	</ol>
 
 	<div id="timeline"></div>
