--- a/map.html
+++ b/map.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" href="style/stylesheet.css" type="text/css"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
 
   <body>
@@ -12,13 +12,13 @@
   	
   	<ol id="buttonList">
   		<li><p>START HERE<p></li>
-  		<li><button id="button" onclick="drawpaths(hourMin, hourMax)">Show all paths</button></li>
+  		<li><button id="button" onclick="drawpaths(hourMin, hourMax); drawpathsInfo();">All trajectories</button></li>
   		<li><img src="img/arrowDown.png" alt="arrow down"></li>
-		<li><button id="button" onclick="animatePaths(hourMin, hourMax)">Animate cars</button></li>
+		<li><button id="button" onclick="animatePaths(hourMin, hourMax)">Car animation</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
-		<li><button id="button" onclick="drawPathSpeed(hourMin, hourMax)">Show car speed</button></li>
+		<li><button id="button" onclick="drawPathSpeed(hourMin, hourMax)">Velocity</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
-		<li><button id="button" onclick="drawSlowTraffic(hourMin, hourMax)">Slow traffic</button></li>
+		<li><button id="button" onclick="drawSlowTraffic(hourMin, hourMax)">Low speed events</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
 		<li><button id="button" onclick="calculateCluster(hourMin, hourMax)">Potential tailback areas</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
@@ -120,7 +120,7 @@
 			
 		});
 
-		document.getElementById('infobox').innerHTML = "<p>Welcome to this javascript visualization of the traffic in Milano.</p>";
+		document.getElementById('infobox').innerHTML = "<p>Welcome to this javascript visualization of the traffic in Milano. <br/> This webpage is a project in the course \'Information Visualization\' at Linköpings University. <br/><br/></p>";
 
 		//Function for drawing brush
 		function drawBrush()
