--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
 		<li><button id="button" onclick="drawPathSpeed(hourMin, hourMax);drawInfobox();">Velocity</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
-		<li><button id="button" onclick="drawSlowTraffic(hourMin, hourMax)">Low speed events</button></li>
+		<li><button id="button" onclick="drawSlowTraffic(hourMin, hourMax); slowTrafficInfo();">Low speed events</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
 		<li><button id="button" onclick="calculateCluster(hourMin, hourMax)">Tailback areas</button></li>
 		<li><img src="img/arrowDown.png" alt="arrow down"></li>
